fixed word wrap of signin page

--- a/app/about/page.css
+++ b/app/about/page.css
@@ -15,6 +15,5 @@
 .middle-card {
     margin: 0 auto;
     height: min(60vh, 100vw);
-    transform: translateY(10%);
     width: auto;
 }
