--- a/components/Navbar/Navbar.css
+++ b/components/Navbar/Navbar.css
@@ -16,6 +16,10 @@ nav{
     z-index: 1;
 }
 
+.active {
+    color: red;
+}
+
 .menu-icon {
     height: 35px;
     width: 35px;
